# cosy-ai-nlp

./: README.md  pyproject.toml
laboratorium_ai_nlp/: __main__.py  main.py
